[package]
name = "tetris_engine"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
image = "0.23.14"

[dependencies.iced]
version = "0.3"
features = ["canvas"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3